# cnn.planner

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindGLOG.cmake
docs/: Doxyfile.in
framework/darknet/src/: convolutional_layer.c  gemm.c
gantt/: README.md  gantt.html  style.css
hwcfg/: simd.json  systolic.json  x86.json
include/analysis/: analysis_report.h  compute_analyzer.h  data_reuse_analyzer.h  energy_analyzer.h  off_chip_access_analyzer.h  on_chip_access_analyzer.h  partial_sum_analyzer.h  roofline_analyzer.h
include/arch/: architecture.h
include/codegen/: code_generator.h  darknet_code_generator.h  layer_type.h  simulation_code_generator.h
include/codegen/ir_gaia/: bias.h  connected.h  conv.h  data.h  data_1d.h  data_2d.h  data_3d.h  data_4d.h  ir_gaia.h  load.h  load_async.h  max_pool.h  memory.h  op.h  relu.h  store.h  store_async.h  sync.h  variable.h
include/general/: data_type.h  tqdm.h  utils.h
include/graph/: activation.h  batch_norm.h  bias.h  concate.h  connected.h  conv.h  crop.h  data.h  data2d.h  data4d.h  detect.h  edge.h  graph.h  layer.h  max_pool.h  network.h  residual.h  softmax.h  vertex.h
include/loop/: cnn_loop.h  scheduler.h  structure.h  variable_set.h  variables.h
include/parameter/: compiler_parameter.h  compiler_parser.h  parameter.h  profiler_parameter.h  profiler_parser.h
include/planner/: cnn_planner.h
include/statistic/: csv_object.h  csv_writer.h
python/: dataset.py  exceptions.py  hardware.py  models.py  planner.py
src/: compiler.cc  profiler.cc
src/analysis/: analysis_report.cc  compute_analyzer.cc  data_reuse_analyzer.cc  energy_analyzer.cc  off_chip_access_analyzer.cc  on_chip_access_analyzer.cc  partial_sum_analyzer.cc  roofline_analyzer.cc
src/arch/: architecture.cc
src/codegen/ir_gaia/: bias.cc  connected.cc  conv.cc  data.cc  data_1d.cc  data_2d.cc  data_3d.cc  data_4d.cc  ir_gaia.cc  load.cc  load_async.cc  max_pool.cc  memory.cc  relu.cc  store.cc  store_async.cc  sync.cc
src/graph/: concate.cc  conv.cc  graph.cc  max_pool.cc  residual.cc  vertex.cc
src/loop/: cnn_loop.cc  scheduler.cc  structure.cc  variable_set.cc  variables.cc
src/parameter/: compiler_parser.cc  profiler_parser.cc
src/planner/: cnn_planner.cc
src/simulation/: simulation_code_generator.cc
src/statistic/: csv_object.cc  csv_writer.cc
test/: csv_gen.cc  csv_gen.sh  lctes.2020
test/cc.2020/: alexnet.py  googlenet_simd.py  mobile.py  squeeze.py  vgg16.py  vgg19.py  vgg19_simd.py  vgg19_systolic.py  vgg19_tripple_simd.py
test/cnns/: alexnet.py  darknet19.py  resnet18.py  squeezenet1_1.py  vgg16.py  vgg19.py
test/lctes.2020.v2/: resnet50.py  yolov2.py
